// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapPaddingBottom renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-bottom: 0;
  -moz-scroll-snap-padding-bottom: 0;
  -ms-scroll-snap-padding-bottom: 0;
  scroll-snap-padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: 0;
  -moz-scroll-snap-padding-bottom: 0;
  -ms-scroll-snap-padding-bottom: 0;
  scroll-snap-padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: 0;
  -moz-scroll-snap-padding-bottom: 0;
  -ms-scroll-snap-padding-bottom: 0;
  scroll-snap-padding-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: 0;
  -moz-scroll-snap-padding-bottom: 0;
  -ms-scroll-snap-padding-bottom: 0;
  scroll-snap-padding-bottom: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-bottom: hasnot;
  -moz-scroll-snap-padding-bottom: hasnot;
  -ms-scroll-snap-padding-bottom: hasnot;
  scroll-snap-padding-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: has;
  -moz-scroll-snap-padding-bottom: has;
  -ms-scroll-snap-padding-bottom: has;
  scroll-snap-padding-bottom: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: hasnot;
  -moz-scroll-snap-padding-bottom: hasnot;
  -ms-scroll-snap-padding-bottom: hasnot;
  scroll-snap-padding-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: has;
  -moz-scroll-snap-padding-bottom: has;
  -ms-scroll-snap-padding-bottom: has;
  scroll-snap-padding-bottom: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-bottom: invalid.path.1;
  -moz-scroll-snap-padding-bottom: invalid.path.1;
  -ms-scroll-snap-padding-bottom: invalid.path.1;
  scroll-snap-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: invalid.path.1;
  -moz-scroll-snap-padding-bottom: invalid.path.1;
  -ms-scroll-snap-padding-bottom: invalid.path.1;
  scroll-snap-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: invalid.path.1;
  -moz-scroll-snap-padding-bottom: invalid.path.1;
  -ms-scroll-snap-padding-bottom: invalid.path.1;
  scroll-snap-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: invalid.path.1;
  -moz-scroll-snap-padding-bottom: invalid.path.1;
  -ms-scroll-snap-padding-bottom: invalid.path.1;
  scroll-snap-padding-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-bottom: -54881;
  -moz-scroll-snap-padding-bottom: -54881;
  -ms-scroll-snap-padding-bottom: -54881;
  scroll-snap-padding-bottom: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: -54881;
  -moz-scroll-snap-padding-bottom: -54881;
  -ms-scroll-snap-padding-bottom: -54881;
  scroll-snap-padding-bottom: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: -42365;
  -moz-scroll-snap-padding-bottom: -42365;
  -ms-scroll-snap-padding-bottom: -42365;
  scroll-snap-padding-bottom: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: -42365;
  -moz-scroll-snap-padding-bottom: -42365;
  -ms-scroll-snap-padding-bottom: -42365;
  scroll-snap-padding-bottom: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: July;
    -moz-scroll-snap-padding-bottom: July;
    -ms-scroll-snap-padding-bottom: July;
    scroll-snap-padding-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: August;
    -moz-scroll-snap-padding-bottom: August;
    -ms-scroll-snap-padding-bottom: August;
    scroll-snap-padding-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: September;
    -moz-scroll-snap-padding-bottom: September;
    -ms-scroll-snap-padding-bottom: September;
    scroll-snap-padding-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: November;
    -moz-scroll-snap-padding-bottom: November;
    -ms-scroll-snap-padding-bottom: November;
    scroll-snap-padding-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: July;
    -moz-scroll-snap-padding-bottom: July;
    -ms-scroll-snap-padding-bottom: July;
    scroll-snap-padding-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: August;
    -moz-scroll-snap-padding-bottom: August;
    -ms-scroll-snap-padding-bottom: August;
    scroll-snap-padding-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: September;
    -moz-scroll-snap-padding-bottom: September;
    -ms-scroll-snap-padding-bottom: September;
    scroll-snap-padding-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: November;
    -moz-scroll-snap-padding-bottom: November;
    -ms-scroll-snap-padding-bottom: November;
    scroll-snap-padding-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: May;
    -moz-scroll-snap-padding-bottom: May;
    -ms-scroll-snap-padding-bottom: May;
    scroll-snap-padding-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: June;
    -moz-scroll-snap-padding-bottom: June;
    -ms-scroll-snap-padding-bottom: June;
    scroll-snap-padding-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: April;
    -moz-scroll-snap-padding-bottom: April;
    -ms-scroll-snap-padding-bottom: April;
    scroll-snap-padding-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: November;
    -moz-scroll-snap-padding-bottom: November;
    -ms-scroll-snap-padding-bottom: November;
    scroll-snap-padding-bottom: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: May;
    -moz-scroll-snap-padding-bottom: May;
    -ms-scroll-snap-padding-bottom: May;
    scroll-snap-padding-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: June;
    -moz-scroll-snap-padding-bottom: June;
    -ms-scroll-snap-padding-bottom: June;
    scroll-snap-padding-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: April;
    -moz-scroll-snap-padding-bottom: April;
    -ms-scroll-snap-padding-bottom: April;
    scroll-snap-padding-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-bottom: November;
    -moz-scroll-snap-padding-bottom: November;
    -ms-scroll-snap-padding-bottom: November;
    scroll-snap-padding-bottom: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-bottom: July;
    -moz-scroll-snap-padding-bottom: July;
    -ms-scroll-snap-padding-bottom: July;
    scroll-snap-padding-bottom: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: August;
    -moz-scroll-snap-padding-bottom: August;
    -ms-scroll-snap-padding-bottom: August;
    scroll-snap-padding-bottom: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-bottom: September;
    -moz-scroll-snap-padding-bottom: September;
    -ms-scroll-snap-padding-bottom: September;
    scroll-snap-padding-bottom: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: November;
    -moz-scroll-snap-padding-bottom: November;
    -ms-scroll-snap-padding-bottom: November;
    scroll-snap-padding-bottom: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-bottom: August;
    -moz-scroll-snap-padding-bottom: August;
    -ms-scroll-snap-padding-bottom: August;
    scroll-snap-padding-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-bottom: July;
    -moz-scroll-snap-padding-bottom: July;
    -ms-scroll-snap-padding-bottom: July;
    scroll-snap-padding-bottom: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: August;
    -moz-scroll-snap-padding-bottom: August;
    -ms-scroll-snap-padding-bottom: August;
    scroll-snap-padding-bottom: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-bottom: September;
    -moz-scroll-snap-padding-bottom: September;
    -ms-scroll-snap-padding-bottom: September;
    scroll-snap-padding-bottom: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: November;
    -moz-scroll-snap-padding-bottom: November;
    -ms-scroll-snap-padding-bottom: November;
    scroll-snap-padding-bottom: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-bottom: August;
    -moz-scroll-snap-padding-bottom: August;
    -ms-scroll-snap-padding-bottom: August;
    scroll-snap-padding-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-bottom: January;
    -moz-scroll-snap-padding-bottom: January;
    -ms-scroll-snap-padding-bottom: January;
    scroll-snap-padding-bottom: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: December;
    -moz-scroll-snap-padding-bottom: December;
    -ms-scroll-snap-padding-bottom: December;
    scroll-snap-padding-bottom: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-bottom: April;
    -moz-scroll-snap-padding-bottom: April;
    -ms-scroll-snap-padding-bottom: April;
    scroll-snap-padding-bottom: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: May;
    -moz-scroll-snap-padding-bottom: May;
    -ms-scroll-snap-padding-bottom: May;
    scroll-snap-padding-bottom: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-bottom: June;
    -moz-scroll-snap-padding-bottom: June;
    -ms-scroll-snap-padding-bottom: June;
    scroll-snap-padding-bottom: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-bottom: January;
    -moz-scroll-snap-padding-bottom: January;
    -ms-scroll-snap-padding-bottom: January;
    scroll-snap-padding-bottom: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: December;
    -moz-scroll-snap-padding-bottom: December;
    -ms-scroll-snap-padding-bottom: December;
    scroll-snap-padding-bottom: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-bottom: April;
    -moz-scroll-snap-padding-bottom: April;
    -ms-scroll-snap-padding-bottom: April;
    scroll-snap-padding-bottom: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-bottom: May;
    -moz-scroll-snap-padding-bottom: May;
    -ms-scroll-snap-padding-bottom: May;
    scroll-snap-padding-bottom: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-bottom: June;
    -moz-scroll-snap-padding-bottom: June;
    -ms-scroll-snap-padding-bottom: June;
    scroll-snap-padding-bottom: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-bottom: 54881;
  -moz-scroll-snap-padding-bottom: 54881;
  -ms-scroll-snap-padding-bottom: 54881;
  scroll-snap-padding-bottom: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: 54881;
  -moz-scroll-snap-padding-bottom: 54881;
  -ms-scroll-snap-padding-bottom: 54881;
  scroll-snap-padding-bottom: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: 42365;
  -moz-scroll-snap-padding-bottom: 42365;
  -ms-scroll-snap-padding-bottom: 42365;
  scroll-snap-padding-bottom: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: 42365;
  -moz-scroll-snap-padding-bottom: 42365;
  -ms-scroll-snap-padding-bottom: 42365;
  scroll-snap-padding-bottom: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-bottom: July;
  -moz-scroll-snap-padding-bottom: July;
  -ms-scroll-snap-padding-bottom: July;
  scroll-snap-padding-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: July;
  -moz-scroll-snap-padding-bottom: July;
  -ms-scroll-snap-padding-bottom: July;
  scroll-snap-padding-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: June;
  -moz-scroll-snap-padding-bottom: June;
  -ms-scroll-snap-padding-bottom: June;
  scroll-snap-padding-bottom: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: June;
  -moz-scroll-snap-padding-bottom: June;
  -ms-scroll-snap-padding-bottom: June;
  scroll-snap-padding-bottom: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingBottom renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-bottom: DarkSlateBlue;
  -moz-scroll-snap-padding-bottom: DarkSlateBlue;
  -ms-scroll-snap-padding-bottom: DarkSlateBlue;
  scroll-snap-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: DarkSlateBlue;
  -moz-scroll-snap-padding-bottom: DarkSlateBlue;
  -ms-scroll-snap-padding-bottom: DarkSlateBlue;
  scroll-snap-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: DarkSlateBlue;
  -moz-scroll-snap-padding-bottom: DarkSlateBlue;
  -ms-scroll-snap-padding-bottom: DarkSlateBlue;
  scroll-snap-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-bottom: DarkSlateBlue;
  -moz-scroll-snap-padding-bottom: DarkSlateBlue;
  -ms-scroll-snap-padding-bottom: DarkSlateBlue;
  scroll-snap-padding-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
